--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -4,10 +4,29 @@
  * mixinの定義 *
  ******************/
 
+$breakpoints: (
+  "md": "screen and (max-width: 1400px)",
+  "tab": "screen and (max-width: 1024px)",
+  "sp": "screen and (max-width: 599px)",
+) !default;
+
+@mixin mq($breakpoint: md) {
+  @media #{map-get($breakpoints, $breakpoint)} {
+    @content;
+  }
+}
+
 @mixin normal-width-contents {
-  width: 1280px;
+  max-width: 1280px;
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
+}
+
+@mixin position_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /******************
@@ -17,8 +36,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-family: "YuGothic", sans-serif;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 section {
@@ -28,49 +51,69 @@ section {
 .large-headline {
   font-family: "Noto Sans JP", sans-serif;
   letter-spacing: 0.1em;
-  font-size: 48px;
+  font-size: 4.8rem;
 }
 
 .medium-headline {
   letter-spacing: 0.1em;
-  font-size: 30px;
+  font-size: 3rem;
 }
 
 .h2-subheadline {
-  font-size: 16px;
+  font-size: 1.6rem;
   letter-spacing: 0.2em;
   font-weight: bold;
   font-family: "Noto Sans JP", sans-serif;
   margin-top: 30px;
 }
 
-nav > ul {
-  display: flex;
-  list-style: none;
+nav {
+  height: 100%;
+  & > ul {
+    display: flex;
+    list-style: none;
+    height: 100%;
+  }
 }
 
 .nav-item {
   padding-left: 20px;
   padding-right: 20px;
-  display: flex;
-  align-items: center;
+  @include position_center();
   font-weight: bold;
+  @include mq() {
+    font-size: 1.5rem;
+  }
 }
 
 .text-container {
   display: flex;
   align-items: center;
-  height: 100px;
+  min-height: 100px;
   flex-grow: 1;
   background-color: #fff;
   time {
-    padding: 30px;
-    font-size: 14px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 1.4rem;
     color: #959595;
   }
   p {
     padding-left: 30px;
+    padding-right: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     color: #303030;
+    text-align: left;
+  }
+
+  @include mq(tab) {
+    flex-direction: column;
+    align-items: start;
+    time {
+      margin-top: 10px;
+      margin-left: 20px;
+    }
   }
 }
 
@@ -81,14 +124,12 @@ nav > ul {
 
 .detail-btn {
   position: relative;
+  @include position_center();
   @extend .navy-style;
   width: 300px;
   height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 0 auto;
-  font-size: 18px;
+  font-size: 1.8rem;
   .Arrow-Right {
     border-color: #fff;
   }
@@ -114,6 +155,7 @@ nav > ul {
   transform: rotate(45deg);
   position: absolute;
   right: 30px;
+  top: calc(50% - 4.2px);
 }
 
 /******************
@@ -130,15 +172,19 @@ header {
   width: 100vw;
   margin: 0 auto;
   color: #333;
-  .nav-item {
-    height: 100px;
+  @include mq() {
+    height: 60px;
   }
 }
 
 h1 {
   font-family: "Noto Sans JP", sans-serif;
-  font-size: 36px;
+  font-size: 3.6rem;
   margin-left: 80px;
+  @include mq() {
+    font-size: 3rem;
+    margin-left: 30px;
+  }
 }
 
 .nav-highlight {
@@ -153,22 +199,37 @@ h1 {
 .main-visual {
   margin-bottom: 100px;
 }
+
+.main-image {
+  width: 100%;
+}
+
 .info-container {
   position: relative;
   bottom: 50px;
   display: flex;
-  align-items: center;
   @include normal-width-contents();
+  @include mq(tab) {
+    bottom: 0;
+  }
+  @include mq(sp) {
+    display: block;
+  }
 }
 
 .h3-container {
-  height: 100px;
   width: 270px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include position_center();
+  @include mq(sp) {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
   h3 {
-    font-size: 22px;
+    font-size: 2.2rem;
+    @include mq(tab) {
+      font-size: 1.8rem;
+    }
   }
 }
 
@@ -178,16 +239,18 @@ h1 {
   @include normal-width-contents();
   position: relative;
   .background-square1 {
-    width: 720px;
+    max-width: 720px;
+    width: 56.25%;
+    min-width: 400px;
     height: 400px;
     top: -80px;
     left: -80px;
   }
   .background-square2 {
     width: 1450px;
-    height: 790px;
     top: -220px;
-    left: 160px;
+    bottom: 235px;
+    left: 12.5%;
   }
 
   .large-headline {
@@ -203,11 +266,18 @@ h1 {
   margin-top: 75px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 60px;
+  @include mq(tab) {
+    display: block;
+  }
 }
 
 .strength-item {
-  width: 400px;
+  width: 31.25%;
+  margin-bottom: 60px;
+  text-align: center;
+  @include mq(tab) {
+    width: 100%;
+  }
   .strength-title {
     display: flex;
     align-items: center;
@@ -223,8 +293,13 @@ h1 {
       margin-left: 20px;
     }
   }
+  img {
+    width: 100%;
+    max-width: 400px;
+  }
   p {
     line-height: 2;
+    text-align: left;
   }
 }
 
@@ -234,33 +309,83 @@ h1 {
   position: relative;
   .background-square1 {
     width: 100vw;
-    height: 550px;
     top: 235px;
+    bottom: 235px;
+    @include mq() {
+      top: 148.3px;
+      bottom: 148.3px;
+    }
+    @include mq(tab) {
+      top: 23.728vw;
+      bottom: 136.5px;
+    }
+  }
+}
+
+.side-container {
+  display: flex;
+
+  @include mq(tab) {
+    flex-direction: column;
   }
 }
 
 .side-image-container {
-  display: flex;
-}
-.side-image {
   width: 800px;
+  @include mq() {
+    width: 500px;
+  }
+  @include mq(tab) {
+    width: 80%;
+    margin: auto;
+    order: 1;
+  }
+}
+
+.side-image {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .side-content {
   width: 640px;
-  padding: 80px;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @include mq() {
+    width: 524px;
+  }
+
+  @include mq(tab) {
+    width: 80%;
+    margin: auto;
+    order: 2;
+  }
+
   .medium-headline {
     margin-bottom: 35px;
+    padding-left: 20px;
+
+    @include mq() {
+      margin-bottom: 10px;
+    }
   }
 
   p {
     line-height: 2;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .detail-btn {
     margin-top: 40px;
     margin-right: 0;
+    @include mq() {
+      margin-top: 10px;
+    }
   }
 }
 
@@ -273,35 +398,49 @@ h1 {
 
 .company-recruit-section {
   @include normal-width-contents();
-  height: 750px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include position_center();
+  max-height: 750px;
+  height: 52.7vw;
+  @include mq(tab) {
+    height: 55vw;
+  }
   position: relative;
   .background-square1 {
-    width: 800px;
-    height: 650px;
+    width: 62.5%;
+    height: 45.7vw;
+    max-height: 650px;
     top: 0;
     left: 0;
+    @include mq(tab) {
+      height: 50vw;
+    }
   }
   .background-square2 {
-    width: 800px;
-    height: 650px;
+    width: 62.5%;
+    height: 45.7vw;
+    max-height: 650px;
     bottom: 0;
     right: 0;
+    @include mq(tab) {
+      height: 50vw;
+    }
   }
 }
 
 .image-title-container {
   display: flex;
   justify-content: space-between;
-  margin-right: 100px;
-  margin-left: 100px;
+  margin-right: 7.8%;
+  margin-left: 7.8%;
+  img {
+    width: 100%;
+    display: block;
+  }
 }
 
 .image-title-item {
   position: relative;
-  margin: 20px;
+  margin: 1.6%;
 }
 
 .image-text-container {
@@ -312,8 +451,17 @@ h1 {
   background-color: #fff;
   display: flex;
   align-items: center;
+  @include mq(tab) {
+    position: relative;
+  }
+  @include mq(sp) {
+    height: 50px;
+  }
   h3 {
     padding-left: 30px;
+    @include mq(sp) {
+      font-size: 2rem;
+    }
   }
 }
 
@@ -322,6 +470,10 @@ h1 {
 .news-section {
   background-color: #f2f2f2;
   padding: 75px;
+  @include mq() {
+    padding-left: 0;
+    padding-right: 0;
+  }
   h2 {
     color: #333;
   }
@@ -356,6 +508,7 @@ h1 {
 .contact-section {
   display: flex;
   text-align: center;
+  align-content: center;
   @include normal-width-contents();
   color: #fefefe;
   background-color: #040865;
@@ -363,12 +516,19 @@ h1 {
   .h2-subheadline {
     margin-top: 10px;
   }
+
+  @include mq(tab) {
+    display: block;
+  }
 }
 
 .contact-container {
   width: 50%;
   padding-top: 35px;
   padding-bottom: 45px;
+  @include mq(tab) {
+    width: 100%;
+  }
   p {
     margin-top: 50px;
     line-height: 2;
@@ -376,6 +536,9 @@ h1 {
   & + .contact-container {
     border-left: solid 1px #fefefe;
     padding-top: 50px;
+    @include mq(tab) {
+      border: none;
+    }
   }
 }
 
@@ -424,14 +587,26 @@ footer {
     margin-top: 40px;
     margin-bottom: 40px;
   }
-  .nav-item:nth-child(1) {
-    padding-left: 0;
-  }
+}
+
+.padding-left-0 {
+  padding-left: 0;
 }
 
 .footer-below-container {
   display: flex;
   justify-content: space-between;
+  margin-left: 30px;
+}
+
+@include mq(tab) {
+  .footer-menu {
+    display: inline;
+  }
+  .footer-nav-item {
+    padding-left: 10px;
+    justify-content: start;
+  }
 }
 
 .copyright {
