--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -2,7 +2,18 @@
 /******************
  * mixinの定義 *
  ******************/
+header {
+  position: fixed;
+  top: 0;
+  z-index: 3;
+  background-color: #fff;
+  border-bottom: solid 1px #eee;
+}
+
 @media screen and (max-width: 1024px) {
+  header {
+    position: relative;
+  }
   #nav-menu {
     display: none;
   }
